@@ -1,3 +1,8 @@
+2016-03-31  Kirill Yukhin  <kirill.yukhin@intel.com>
+
+	PR target/70453
+	* gcc.target/i386/pr70453.c: New test.
+
 2016-03-31  Andrey Belevantsev  <abel@ispras.ru>
 
 	PR target/70292
